Added PM10 ARIMA imputed results

--- a/notebooks/ARIMA.ipynb
+++ b/notebooks/ARIMA.ipynb
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -847,13 +847,13 @@
        "66.10281489329252"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from fancyimpute import SoftImpute\n",
+    "from fancyimpute import SoftImpute, KNN, BiScaler\n",
     "\n",
     "imputed_pm25_train = SoftImpute().fit_transform(y_train_pm25)\n",
     "model_imputed = ARIMA(imputed_pm25_train, order=(3,0,0))\n",
@@ -866,6 +866,144 @@
     "predictions = forecast_result_imputed[0]\n",
     "predictions = predictions[nonnull_values]\n",
     "rmse(predictions, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SoftImpute] Max Singular Value of X_init = 6502.824079\n",
+      "[SoftImpute] Iter 1: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 2: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 3: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 4: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 5: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 6: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 7: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 8: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 9: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 10: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 11: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 12: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 13: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 14: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 15: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 16: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 17: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 18: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 19: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 20: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 21: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 22: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 23: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 24: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 25: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 26: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 27: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 28: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 29: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 30: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 31: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 32: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 33: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 34: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 35: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 36: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 37: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 38: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 39: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 40: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 41: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 42: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 43: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 44: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 45: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 46: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 47: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 48: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 49: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 50: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 51: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 52: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 53: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 54: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 55: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 56: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 57: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 58: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 59: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 60: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 61: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 62: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 63: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 64: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 65: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 66: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 67: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 68: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 69: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 70: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 71: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 72: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 73: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 74: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 75: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 76: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 77: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 78: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 79: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 80: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 81: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 82: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 83: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 84: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 85: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 86: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 87: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 88: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 89: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 90: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 91: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 92: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 93: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 94: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 95: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 96: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 97: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 98: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 99: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Iter 100: observed MAE=1.248264 rank=1\n",
+      "[SoftImpute] Stopped after iteration 100 for lambda=130.056482\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "44.34044138822746"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputed_pm10_train = KNN(k=).fit_transform(y_train_pm10)\n",
+    "model_imputed_pm10 = ARIMA(imputed_pm10_train, order=(2,0,0))\n",
+    "model_fit_imputed_pm10 = model_imputed_pm10.fit(disp=0)\n",
+    "\n",
+    "forecast_result_imputed_pm10 = model_fit_imputed_pm10.forecast(steps=2016)\n",
+    "\n",
+    "nonnull_values_pm10 = y_valid_pm10['PM10'].notnull()\n",
+    "y = y_valid_pm10['PM10'][nonnull_values_pm10]\n",
+    "predictions_pm10 = forecast_result_imputed_pm10[0]\n",
+    "predictions_pm10 = predictions_pm10[nonnull_values]\n",
+    "rmse(predictions_pm10, y)"
    ]
   },
   {
