--- a/notebooks/ARIMA.ipynb
+++ b/notebooks/ARIMA.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -987,13 +987,13 @@
        "44.34044138822746"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "imputed_pm10_train = KNN(k=).fit_transform(y_train_pm10)\n",
+    "imputed_pm10_train = SoftImpute().fit_transform(y_train_pm10)\n",
     "model_imputed_pm10 = ARIMA(imputed_pm10_train, order=(2,0,0))\n",
     "model_fit_imputed_pm10 = model_imputed_pm10.fit(disp=0)\n",
     "\n",
